--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 Bio==1.5.9
 matplotlib==3.7.1
-numpy==1.24.3
-pandas==2.0.2
+numpy==1.22.4
+pandas==1.5.3
 scikit_learn==1.2.2
 scipy==1.11.0
 seaborn==0.12.2
-torch==2.0.1
+torch==2.0.1+cu118
 tqdm==4.65.0
 transformers==4.30.2
